# blokada

./: .BUILDING.md.swp  .appiumrc.yaml  .editorconfig  .gitignore  .gitmodules  .onedev-buildspec.yml  AGENTS.md  About us.md  BUILD.md  BUILDING.md  CLAUDE.md  COMPILE  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_FLUTTER.md  build.blocka.sh  build.boringtun.sh  build.flutter.sh  build.gradle  build.sh  et --soft HEAD~1  gradle.properties  install.sh  local.properties  make-flavor.sh  makef  publish-android-family.sh  publish-android-v5.sh  publish-android-v6.sh  publish-android.sh  publish-dashboard.sh  publish-ios-v6.sh  publish-ios.sh  publish-landing.sh  remove-tag.sh  remove-translations.sh  settings.gradle  sync-blocklist.sh  (+3 more)
.claude/: settings.json  worktree-copy
.github/: dependabot.yml
.github/scripts/: translation_coverage.py
.github/workflows/: android.yml  android5.yml  android6.yml  androidfamily.yml  appium-ai-explore.yml  appium-smoke.yml  check-adapty-fallback.yml  ci.yml  dependabot-auto-merge.yml  ios.yml  ios6.xml  iosfamily.yml  landing.yml  mirror.yml  release-tag.yml  translations-sync.yml
android/: .gitignore  .gitmodules  BUILDING.md  Makefile  README.md  build.engine.sh  build.gradle  gradle.properties  gradlew  release.sh  settings.gradle  sync-common.sh  sync-wireguard.sh
android/app/: build.gradle  proguard-family.pro  proguard-rules.pro
android/whatsnew/: whatsnew-en-US  whatsnew-pl-PL  whatsnew-zh-CN
android4/: .gitignore  gradle.properties
android4/app/: build.gradle
android5/: build.engine.sh  build.gradle  settings.gradle
android5/app/: build.gradle
app/: build.gradle  proguard-rules.pro
automation/appium/: Makefile  README.md
automation/dep-validate/: queue.mjs  report.mjs
automation/device/: log.mjs
blocka_engine/: Cargo.toml
blocka_engine/blocka_api/: Cargo.toml  cbindgen.toml  libblocka_api.h
blocka_engine/blocka_api/src/: client.rs  ffi.rs  lib.rs  parser.rs
blocka_engine/blocka_api/src/test-data/: hostfile.txt
blocka_engine/blocka_dns/: .gitignore  Cargo.toml  Makefile.toml  example_forwarder.toml
blocka_engine/blocka_dns/examples/forwarder/: main.rs
blocka_engine/blocka_dns/examples/memoryleak/: main.rs
blocka_engine/blocka_dns/src/: android.rs  authority.rs  connector.rs  ffi.rs  lib.rs  network.rs  runtime.rs
blocka_engine/engine/: Cargo.toml  build.rs  cbindgen.toml  libengine.h
blocka_engine/engine/src/: lib.rs
blocka_engine/engine/src/ffi/: mod.rs
blocka_engine/util/: Cargo.toml
blocka_engine/util/src/: ffi.rs  lib.rs  logger.rs
boringtun/: Cargo.toml  build.sh
boringtun/.cargo/: config
boringtun/src/: jni.rs  main.rs
common/: .fvmrc  .gitignore  .metadata  Makefile  README.md  analysis_options.yaml  build.for.ios.sh  build.yaml  gradle.properties  i.needs.g  pubspec.yaml  scene-TestModule.txt  sync-generated-files.sh  sync-translations.sh  websocket.py
common/.android/: build.gradle  local.properties
common/coverage/: lcov.info
common/docs/: ACCOUNT_TYPES.md
common/ios/: App.swift  Command.swift  Common.swift  Core.swift  Family.swift  Payment.swift  Perm.swift  Plus.swift  Stage.swift
common/lib/: api.dart  common.dart  dev_seed.dart  entrypoint.dart  event.dart  frontscreen.dart  home.dart  main-mocked-family.dart  main-mocked-six.dart  main-mocked-v6.dart  main-mocked.dart  main-widgets.dart  main.dart  main_mocked_shared.dart  mock_traffic.dart  mocked-deps.dart  mocked.dart  modules.dart  pie_chart_page.dart  radial_segment.dart  selector.dart
common/libgen/: App.dart  Command.dart  Common.dart  Family.dart  Payment.dart  Perm.dart  Plus.dart  Safari.dart  Stage.dart
common/scripts/: build.for.ios.sh  pigeon.py
common/test/: api_test.dart  entrypoint_test.dart  fixtures.dart  modules_test.dart  tools.dart  tools_test.dart  widget_test.dart
docs/: CONTRIBUTING.md  RequestLogging.md  issue_template.md  release.md
docs/domain/: domain-knowledge.md
gradle/wrapper/: gradle-wrapper.properties
ios/: .gitignore  .gitmodules  BUILDING.md  BlockaWebExt-Info.plist  Channel  Family.entitlements  FamilyDevRelease.entitlements  FamilyProdRelease.entitlements  Gemfile  METADATA.md  Makefile  Matchfile  Mocked copy-Info.plist  Package.swift  Podfile  README.md  SIMULATOR.md  blokada-appstore.json  release.sh  swiftgen.yml  sync-common.sh  sync-translations.sh  wireguard-apple
ios/App/: Common.swift
ios/AppTests/: AccountRepoTests.swift  AccountRepositoryTests.swift  AppTests.swift  CombineTests.swift  ModelTests.swift  ProcessingRepoTests.swift  TaskerTests.swift
ios/BlockaEngine/: IOS-Bridging-Header.h  hosts.txt  libengine.h
ios/BlockaWebExtension/: .gitignore  BlockaWebExt.entitlements  CLAUDE.md  Makefile  SafariWebExtensionHandler.swift  package-lock.json  package.json
ios/Engine/: hosts.txt
ios/Family/: Flavor.swift  (+19 more)
libcore/: build.gradle  proguard-rules.pro
libui/: build.gradle  proguard-rules.pro
old/: publish-android-v5.sh  publish-android.sh  publish-ios.sh  sync-landing.sh
scripts/: check-adapty-fallback-version.mjs  check_metadata_lengths.sh  convert-domains-to-rules.py  convert.py  ddg.py  en_check_elf_alignment.sh  mirror.py  sign-ios-frameworks.sh  sync-generated-files.sh  sync-translations-android.sh  sync-translations-ios.sh  sync-translations.sh  translate.py  verify-ios-ipa-signatures.sh  version.py  whitelist
(+6031 files in other folders)
