[workspace]

members = [
  "blocka_api",
  "blocka_dns",
  "engine",
  "util",
]

[patch.crates-io]
trust-dns-client = { git = "https://github.com/bluejekyll/trust-dns.git", rev = "fb5716cf" }
trust-dns-https = { git = "https://github.com/bluejekyll/trust-dns.git", rev = "fb5716cf" }
trust-dns-proto = { git = "https://github.com/bluejekyll/trust-dns.git", rev = "fb5716cf" }
trust-dns-resolver = { git = "https://github.com/bluejekyll/trust-dns.git", rev = "fb5716cf" }
trust-dns-rustls = { git = "https://github.com/bluejekyll/trust-dns.git", rev = "fb5716cf" }
trust-dns-server = { git = "https://github.com/bluejekyll/trust-dns.git", rev = "fb5716cf" }

[profile.dev]
opt-level = 1
