[package]
name = "engine"
version = "0.1.0"
authors = ["Johnny Bergström <johnny@klaudify.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blocka_api = { path = "../blocka_api" }
blocka_dns = { path = "../blocka_dns" }
boringtun = "0.3"
hex = "0.4.2"
base64 = "0.12"
libc = "0.2"
log = "0.4"
util = { path = "../util" }

[build-dependencies]
cbindgen = "0.14"
cargo-lipo = "3.1"

[lib]
crate-type = ["lib", "staticlib"]
